classDiagram
  %% Controller-Service Dependency Graph
  %% Generated by AutoDoc

  class PurchaseOrder {
    <<Controller>>
    +deleteApiPurchase-OrdersId()
    +getApiPurchase-Orders()
    +getApiPurchase-OrdersId()
    +getApiPurchase-OrdersIdItems()
    +postApiPurchase-Orders()
    +more()...
    +package controllers
  }

  class Product {
    <<Controller>>
    +deleteApiProductsId()
    +getApiProducts()
    +getApiProductsId()
    +postApiProducts()
    +putApiProductsId()
    +package controllers
  }

  class ProductService {
    <<Service>>
    Used by 1 controllers
  }

  class PurchaseOrderService {
    <<Service>>
    Used by 1 controllers
  }

  PurchaseOrder "1" --> "1" PurchaseOrderService : field
  Product "1" --> "1" ProductService : field
  %% Notes for important services
